welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: type mismatch;
 found   : Unit
 required: Boolean
		if( nums(i)=1){
                           ^array123:2: error: type mismatch;
 found   : Unit
 required: Boolean
	for (i<-0 to nums.length - 1){
              ^